<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="select_sensor">Choose sensor(s) to test:</string>
    <string name="button_compas">COMPASS</string>
    <string name="button_accelerometers">ACCELEROMETERS</string>
    <string name="heading_compass">Heading: %d ° %s</string>
    <string name="accelerometer_title">Accelerometer values:</string>
    <string name="x_accelerometer">X: %f</string>
    <string name="y_accelerometer">Y: %f</string>
    <string name="z_accelerometer">Z: %f</string>
    <string name="direction_accelerometer">%s</string>
    <string name="direction_accelerometer_up">UP</string>
    <string name="direction_accelerometer_down">DOWN</string>
    <string name="direction_accelerometer_left">LEFT</string>
    <string name="direction_accelerometer_right">RIGHT</string>
    <string name="direction_accelerometer_screen_up">SCREEN UP</string>
    <string name="direction_accelerometer_screen_down">SCREEN DOWN</string>
</resources>
